--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hi there!
+<!DOCTYPE html>
+<html>
+<head>
+	<title>
+		First Web Page
+	</title>
+</head>
+<body>
+  <h1> Hi hi hi hi hi</h1>
+	Hello World!
+</body>
+</html>
