in index.html link to pyscript html
in index.html link to other page which contains pyscript html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button onclick="evaluatePython()">Run</button>
     <br />
     <br />
+    
     <div>Output:</div>
     <textarea id="output" style="width: 100%;" rows="6" disabled></textarea>
 
@@ -43,5 +44,8 @@
         }
       }
     </script>
+
+   <div> What dis? </div>
+   <p><a href="/demo_pyscript_03.html"> Test pyscript.</a></p> 
   </body>
 </html>
