Link to stlite demo

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     
     <div> Is line break needed with div tag? </div>
     <p><a href="/demo_pyscript_local_04.html"> Local pyscript.</a></p> 
-    
+
+  </br>
+    <p><a href="/demo_stlite.html"> Stlite</a></p> 
   </body>
 </html>
