--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
   </br>
   <!-- <p><a href="/"> local link </a></p> -->
-  <p><a href="/d3/multiplication_table.html"> Multiplication table </a></p>
+  <p><a href="d3/multiplication_table.html"> Multiplication table </a></p>
+</br>
     <p><a href="https://shinylive.io/py/app/#code=NobwRAdghgtgpmAXGKAHVA6VBPMAaMAYwHsIAXOcpMAMwCdiYACAZwAsBLCbDOAD1R04LFkw4xUxOmTERUAVzJ4mQiABM4dZfI4AdCPUatO3MRKkyhUQmQ4A3OPsPMSAG1dwbHUqPGTpTADCxPLkmvr6xKhkogC8TGTyqB4AFMAsZHQpHACUTDRSYrIqUBAA5nApAEx4AIwAzDkAujn6OhhcCmQA+ixwHjYpumBqHISO+EzDACJjE8pRMa0Q+hoARvJlTPHAAOx4+-s19XgnTPsAHExN+kJxKnDWtg4YAGpQrvKV65vL+gACVi8LzgNBonjIAKBzzgvAc5GyckUGFG42WGhorDIUkqOUQ+iYhKYUG2TGAXDI2TyBToRS4DxYGAqlOaBKJdwwfUpJIA1GSKYiuii5ikcs0-hBAY9gbDCB9CKtQUxOBlRfiIESmIRScFQhQshzmaLlpqhIk6BrgCk1MpCEy4JSbUwAAxi-KFNTFOilCrVOqNG4rCAAYil6k0GAofEhIYxCWjav0wc1nviNGGIE6yNRuIAvsMk6aHfILVisiqWRKwxo6BgSBpFZjCPIMoxExqiQByVQ1rXEDRMAA8AFomK4uHA1lYANYsTtswk0GAyeIZxAAPQALLmmCBEABWHcgfMRMALpghFf5ZcYGkwKCUmZzYbKYYAPhfUzAADEhABHDBhhNIkaSYa08AgPJ6QrdtNU1NYoFpVcwA-MAmAAKiYIM4KJS8mB5NMbzvB9wIQrRIPPM0Sw1S8wFzJogA"> Shiny live dice histogram demo</a></p> 
   </body>
   </br>
